// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulletPoint should align correctly 1`] = `
<div>
  <div
    class="undefined "
  >
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        one
      </span>
    </p>
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        two
      </span>
    </p>
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        three
      </span>
    </p>
  </div>
</div>
`;

exports[`BulletPoint should align correctly 2`] = `
<div>
  <div
    class="undefined undefined"
  >
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        one
      </span>
    </p>
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        two
      </span>
    </p>
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        three
      </span>
    </p>
  </div>
</div>
`;

exports[`BulletPoint should render variants correctly 1`] = `
<div>
  <div
    class="undefined "
    data-variant="variant-1"
  >
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        one
      </span>
    </p>
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        two
      </span>
    </p>
    <p>
      <span>
        <test-file-stub />
      </span>
      <span>
        three
      </span>
    </p>
  </div>
</div>
`;
